fixed overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,13 @@ body {
     background-color: var(--primarycolor);
     background-image: linear-gradient(135deg, var(--primarycolor), var(--secondarycolor), var(--tertiarycolor));
     background-size: 500%;
+    background-repeat: no-repeat;
     animation-name: bg-anim;
     animation-duration: 15s;
     animation-iteration-count: infinite;
     margin: 0px 0px;
     transition: background-image 0.5s;
+    overflow: hidden;
 }
 
 a:link {
